# Cpp_Course

./: CMakeLists.txt
lw1/: hello1.cpp  lefloat.cpp  linear_equation.cpp
sfml.2/00/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
sfml.2/01/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
sfml.2/02/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
sfml.2/03/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
sfml.2/sfml2.1/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
sfml.2/sfml2.2/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
sfml3/: CMakeCache.txt  CMakeLists.txt
sfml3/00/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
sfml3/01/: main.cpp
sfml3/02/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
sfml3/022/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
sfml3/03/: CMakeCache.txt  CMakeLists.txt  Makefile  main.cpp  (+1 more)
workshop1.1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
workshop1.2/: CMakeLists.txt  main.cpp
workshop1.3/: CMakeLists.txt  main.cpp
workshop1.4/: CMakeLists.txt  main.cpp
workshop2.1/: CMakeLists.txt  main.cpp
workshop2.2/: CMakeLists.txt  main.cpp
workshop2.3/: CMakeLists.txt  main.cpp
workshop2.4/: CMakeLists.txt  main.cpp
workshop2.5/: CMakeLists.txt  main.cpp
workshop2.6/: CMakeLists.txt  main.cpp
workshop2.7/: CMakeLists.txt  main.cpp
workshop3.1/: CMakeLists.txt  main.cpp
workshop3.3/: CMakeLists.txt  main.cpp  main.hpp
сфмл.2/: CMakeLists.txt
(+18 files in other folders)
