add_executable(workshop3.1 main.cpp)

set(SFML_STATIC_LIBRARIES TRUE)

find_package(Freetype REQUIRED)
find_package(JPEG REQUIRED)
find_package(SFML 2 COMPONENTS window graphics system REQUIRED)

target_include_directories(workshop3.1 PRIVATE ${SFML_INCLUDE_DIR})
target_compile_features(workshop3.1 PUBLIC cxx_std_17)
target_compile_definitions(workshop3.1 PRIVATE SFML_STATIC)

message("SFML_LIBRARIES=${SFML_LIBRARIES}")
target_link_libraries(workshop3.1 ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})